# lucode

./: .env.example  .gitignore  README.md  main.py  package.json  pyproject.toml  后续改进计划1期.md  多脑模型调音台修改计划执行表.md
catalog_system/: __init__.py  loader.py  model_catalog.py  model_probe.py  model_sources_env.py  permission_policy.py  refresher.py
catalogs/: README.md  __init__.py  mcp_catalog.json  model_catalog.generated.json  permission_policy.json  provider_catalog.json  skill_catalog.json
lucode/: __init__.py  __main__.py  entry.py
mcp_servers/: __init__.py  quiet_stdio.py  safe_delete_mcp.py  web_search_mcp.py
planning/: __init__.py  plan_reviewer.py  plan_validator.py  planner.py  planner_schema.py
runtime/: __init__.py  agent_factory.py  dynamic_runtime.py  run_workspace.py
skills/: loader.py  registry.py
tests/: run_regression.py  test_auditor_final_content.py  test_event_bus_wrapper.py  test_final_answer_renderer.py  test_gui_batch_b.py  test_gui_batch_c.py  test_gui_control_panel.py  test_mode_skill_contracts.py  test_model_labels.py  test_output_controller.py  test_output_rendering.py  test_readonly_directory_fast_path.py  test_rich_live_runtime.py  test_rich_live_view.py  test_solo_rich_live.py  test_supervisor_contracts.py  test_turn_mode_and_input.py  test_ui_theme.py  test_worker_model_pool.py  test_worker_output_expand.py  test_worker_prompt_contract.py
计划文档/: ARCHITECTURE_GAP_ANALYSIS.md  CONTEXT_SUMMARY_LAST_5_DAYS_2026-05-09.md  C阶段框架处理.md  DEEP_CODE_ANATOMY_AND_RESUME_ANALYSIS.md  PROJECT_EVALUATION_OPTIMIZATION_REPORT.md  PROJECT_ROADMAP.md  README.md  产品化路线图.md  新修改方向.md  解耦评审报告.md  解耦项目建议参考.md
(+178 files in other folders)
