[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lucode"
version = "0.1.0"
description = "Lucode terminal coding agent"
requires-python = ">=3.11"
dependencies = [
  "openai-agents==0.14.6",
  "mcp>=1.27,<2",
  "prompt_toolkit>=3.0.52,<4",
  "requests>=2.33,<3",
  "rich>=15,<16",
]
license = { text = "UNLICENSED" }

[project.scripts]
lucode = "lucode.entry:main"

[tool.setuptools.packages.find]
where = ["."]
include = [
  "catalogs*",
  "catalog_system*",
  "lucode*",
  "mcp_servers*",
  "planning*",
  "runtime*",
  "skills*",
]

[tool.setuptools.package-data]
catalogs = ["*.json", "*.md"]
skills = ["**/*"]

[tool.setuptools.exclude-package-data]
"*" = [
  "__pycache__/*",
  "*.pyc",
  "*.pyo",
  "jpc_now_skill/*",
  "jpc_now_skill/**/*",
  "Humanizer-zh-main/*",
  "Humanizer-zh-main/**/*",
  "task-router/*",
  "task-router/**/*",
]
